--- a/bpms-client/src/app/globals.css
+++ b/bpms-client/src/app/globals.css
@@ -81,12 +81,13 @@ body {
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
+  /* background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
-    rgb(var(--background-start-rgb));
+    rgb(var(--background-start-rgb)); */
+    background: rgb(55, 55, 55);
 }
 
 a {
@@ -98,4 +99,7 @@ a {
   html {
     color-scheme: dark;
   }
+}
+ul li{
+  list-style: none;
 }
